exports[`<MobileIronForm /> renders displays an error when any field is empty 1`] = `
<div>
  <div
    className="form-group has-feedback has-error">
    <label
      className="control-label"
      htmlFor="mi_hostName">
      Host Name
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <div
      aria-live="assertive"
      className="msgBlock error error-list"
      role="alert">
      <span>
        Please enter a valid host name.
      </span>
    </div>
    <input
      className="form-control"
      defaultValue=""
      disabled={true}
      id="mi_hostName"
      type="text" />
  </div>
  <div
    className="form-group has-feedback">
    <label
      className="control-label"
      htmlFor="mi_userName">
      MobileIron Core Username
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <input
      className="form-control"
      defaultValue={undefined}
      disabled={true}
      id="mi_userName"
      type="text" />
  </div>
  <div
    className="form-group has-feedback">
    <label
      className="control-label"
      htmlFor="mi_password">
      MobileIron Core Password
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <input
      className="form-control"
      defaultValue={undefined}
      disabled={true}
      id="mi_password"
      type="password" />
  </div>
</div>
`;

exports[`<MobileIronForm /> renders displays an error when any field is empty 2`] = `
<div>
  <div
    className="form-group has-feedback has-error">
    <label
      className="control-label"
      htmlFor="mi_hostName">
      Host Name
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <div
      aria-live="assertive"
      className="msgBlock error error-list"
      role="alert">
      <span>
        Please enter a valid host name.
      </span>
    </div>
    <input
      className="form-control"
      defaultValue=""
      disabled={true}
      id="mi_hostName"
      type="text" />
  </div>
  <div
    className="form-group has-feedback has-error">
    <label
      className="control-label"
      htmlFor="mi_userName">
      MobileIron Core Username
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <div
      aria-live="assertive"
      className="msgBlock error error-list"
      role="alert">
      <span>
        Please enter a valid username.
      </span>
    </div>
    <input
      className="form-control"
      defaultValue=""
      disabled={true}
      id="mi_userName"
      type="text" />
  </div>
  <div
    className="form-group has-feedback">
    <label
      className="control-label"
      htmlFor="mi_password">
      MobileIron Core Password
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <input
      className="form-control"
      defaultValue={undefined}
      disabled={true}
      id="mi_password"
      type="password" />
  </div>
</div>
`;

exports[`<MobileIronForm /> renders displays an error when any field is empty 3`] = `
<div>
  <div
    className="form-group has-feedback has-error">
    <label
      className="control-label"
      htmlFor="mi_hostName">
      Host Name
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <div
      aria-live="assertive"
      className="msgBlock error error-list"
      role="alert">
      <span>
        Please enter a valid host name.
      </span>
    </div>
    <input
      className="form-control"
      defaultValue=""
      disabled={true}
      id="mi_hostName"
      type="text" />
  </div>
  <div
    className="form-group has-feedback has-error">
    <label
      className="control-label"
      htmlFor="mi_userName">
      MobileIron Core Username
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <div
      aria-live="assertive"
      className="msgBlock error error-list"
      role="alert">
      <span>
        Please enter a valid username.
      </span>
    </div>
    <input
      className="form-control"
      defaultValue=""
      disabled={true}
      id="mi_userName"
      type="text" />
  </div>
  <div
    className="form-group has-feedback has-error">
    <label
      className="control-label"
      htmlFor="mi_password">
      MobileIron Core Password
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <div
      aria-live="assertive"
      className="msgBlock error error-list"
      role="alert">
      <span>
        Please enter a valid password.
      </span>
    </div>
    <input
      className="form-control"
      defaultValue=""
      disabled={true}
      id="mi_password"
      type="password" />
  </div>
</div>
`;

exports[`<MobileIronForm /> renders matches previous snapshot 1`] = `
<div>
  <div
    className="form-group has-feedback">
    <label
      className="control-label"
      htmlFor="mi_hostName">
      Host Name
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <input
      className="form-control"
      defaultValue={undefined}
      disabled={false}
      id="mi_hostName"
      type="text" />
  </div>
  <div
    className="form-group has-feedback">
    <label
      className="control-label"
      htmlFor="mi_userName">
      MobileIron Core Username
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <input
      className="form-control"
      defaultValue={undefined}
      disabled={false}
      id="mi_userName"
      type="text" />
  </div>
  <div
    className="form-group has-feedback">
    <label
      className="control-label"
      htmlFor="mi_password">
      MobileIron Core Password
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <input
      className="form-control"
      defaultValue={undefined}
      disabled={false}
      id="mi_password"
      type="password" />
  </div>
</div>
`;

exports[`<MobileIronForm /> renders matches previous snapshot 2`] = `
<div>
  <div
    className="form-group has-feedback">
    <label
      className="control-label"
      htmlFor="mi_hostName">
      Host Name
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <input
      className="form-control"
      defaultValue={undefined}
      disabled={true}
      id="mi_hostName"
      type="text" />
  </div>
  <div
    className="form-group has-feedback">
    <label
      className="control-label"
      htmlFor="mi_userName">
      MobileIron Core Username
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <input
      className="form-control"
      defaultValue={undefined}
      disabled={true}
      id="mi_userName"
      type="text" />
  </div>
  <div
    className="form-group has-feedback">
    <label
      className="control-label"
      htmlFor="mi_password">
      MobileIron Core Password
      <span
        className="required-asterisks">
         *
      </span>
    </label>
    <input
      className="form-control"
      defaultValue={undefined}
      disabled={true}
      id="mi_password"
      type="password" />
  </div>
</div>
`;
